--- a/OPTmotors/misc/make_2Dtable_From1DEarthModels.ipynb
+++ b/OPTmotors/misc/make_2Dtable_From1DEarthModels.ipynb
@@ -61,9 +61,9 @@
     "ParamFile = \"../test/testparam.csv\"\n",
     "include(\"../src/batchRevise.jl\") \n",
     "\n",
-    "myInclude(\"../src/batchDrWatson.jl\")\n",
-    "myInclude(\"../src/DSM1D.jl\")\n",
-    "myInclude(\"../src/GeoPoints.jl\")\n",
+    "include(\"../src/batchDrWatson.jl\")\n",
+    "include(\"../src/DSM1D.jl\")\n",
+    "include(\"../src/GeoPoints.jl\")\n",
     "using .DSM1D"
    ]
   },
