--- a/OPTmotors/myOwnApplications/demo1.ipynb
+++ b/OPTmotors/myOwnApplications/demo1.ipynb
@@ -10,29 +10,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "id": "85b7f81f",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "using_revise = true\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Documents/Github/flexibleDSM`\n",
-      "┌ Info: Including with Revise: ../src/imageReader.jl\n",
-      "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchRevise.jl:25\n",
-      "┌ Info: Including with Revise: ../src/OPTwrappers.jl\n",
-      "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchRevise.jl:25\n",
-      "┌ Info: Including with Revise: ../src/OPTnewEngines.jl\n",
-      "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchRevise.jl:25\n"
+      "┌ Warning: Metal.jl not available or no Metal devices detected: UndefVarError(:Metal, 0x0000000000009a58, Main)\n",
+      "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchEnzyme.jl:27\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "constructingNumericalDiscretisedEquations (generic function with 2 methods)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -43,17 +41,15 @@
     "Pkg.activate(\"../..\")\n",
     "using BenchmarkTools\n",
     "# below are the tools to debug the code\n",
-    "#using Revise # if we use Revise, myInclude will be Revise.myIncludet\n",
+    "#using Revise # if we use Revise, include will be Revise.includet\n",
     "using Profile, StatProfilerHTML\n",
     "\n",
     "\n",
-    "include(\"../src/batchRevise.jl\") # Revise.jl will be automatically activated. If you do not want Revise then put using_revise = false\n",
-    "#using_revise=false\n",
-    "@show using_revise\n",
-    "myInclude(\"../src/imageReader.jl\") # read 2D images for models\n",
     "\n",
-    "myInclude(\"../src/OPTwrappers.jl\") \n",
-    "myInclude(\"../src/OPTnewEngines.jl\")  # I do this to test\n"
+    "include(\"../src/imageReader.jl\") # read 2D images for models\n",
+    "\n",
+    "include(\"../src/OPTwrappers.jl\") \n",
+    "include(\"../src/OPTnewEngines.jl\")  # I do this to test\n"
    ]
   },
   {
