--- a/OPTmotors/misc/geopoints_exercises.ipynb
+++ b/OPTmotors/misc/geopoints_exercises.ipynb
@@ -41,10 +41,10 @@
     "ParamFile = \"../test/testparam.csv\"\n",
     "include(\"../src/batchRevise.jl\") \n",
     "\n",
-    "myInclude(\"../src/batchDrWatson.jl\")\n",
-    "myInclude(\"../src/DSM1D.jl\")\n",
-    "myInclude(\"../src/GeoPoints.jl\")\n",
-    "myInclude(\"../src/getSeismicParamTopo.jl\")\n",
+    "include(\"../src/batchDrWatson.jl\")\n",
+    "include(\"../src/DSM1D.jl\")\n",
+    "include(\"../src/GeoPoints.jl\")\n",
+    "include(\"../src/getSeismicParamTopo.jl\")\n",
     "using .DSM1D"
    ]
   },
