--- a/OPTmotors/myOwnApplications/demo1.ipynb
+++ b/OPTmotors/myOwnApplications/demo1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "85b7f81f",
    "metadata": {},
    "outputs": [
@@ -18,9 +18,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Documents/Github/flexibleDSM`\n",
-      "┌ Warning: Metal.jl not available or no Metal devices detected: UndefVarError(:Metal, 0x0000000000009a58, Main)\n",
-      "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchEnzyme.jl:27\n"
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Documents/Github/flexibleDSM`\n"
      ]
     },
     {
@@ -54,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "dda029a4",
    "metadata": {},
    "outputs": [
@@ -74,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "0ae67625",
    "metadata": {},
    "outputs": [
@@ -97,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "29587f11",
    "metadata": {},
    "outputs": [
@@ -118,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "7bedc499",
    "metadata": {},
    "outputs": [],
@@ -168,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "2c7f82cd",
    "metadata": {},
    "outputs": [
@@ -196,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "f5ea4cf5",
    "metadata": {},
    "outputs": [],
@@ -209,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "6274c090",
    "metadata": {},
    "outputs": [
@@ -240,17 +238,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "2a2ab3be",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(x, y, t)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "coordinates"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "8cd30c3a",
    "metadata": {},
    "outputs": [
@@ -286,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "98b5b8ba",
    "metadata": {},
    "outputs": [
@@ -308,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "7f90a668",
    "metadata": {},
    "outputs": [
@@ -328,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "6596fcab",
    "metadata": {},
    "outputs": [
@@ -355,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "884a4dc6",
    "metadata": {},
    "outputs": [
@@ -417,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "3ccec8ec",
    "metadata": {},
    "outputs": [
@@ -464,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "bc933626",
    "metadata": {},
    "outputs": [
@@ -510,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "9e670dfe",
    "metadata": {},
    "outputs": [
@@ -552,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "24c896e3",
    "metadata": {},
    "outputs": [
@@ -601,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "0d7f0267",
    "metadata": {},
    "outputs": [
@@ -655,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "9692ea9e",
    "metadata": {},
    "outputs": [
@@ -696,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "447fc4a0",
    "metadata": {},
    "outputs": [
@@ -728,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "38a0040a",
    "metadata": {},
    "outputs": [
@@ -775,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "df9f803d",
    "metadata": {},
    "outputs": [],
@@ -787,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "1122af9d",
    "metadata": {},
    "outputs": [
@@ -835,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "efaa915f",
    "metadata": {},
    "outputs": [
@@ -855,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "id": "82221aca",
    "metadata": {},
    "outputs": [
@@ -901,6 +909,192 @@
     "        #AjiννᶜU=push!(AjiννᶜU,tmpAjiννᶜU)\n",
     "        #Ulocal=push!(Ulocal,tmpUlocal)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "360e0c38",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ASemiSymbolic (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# inside ASemiSymbolic\n",
+    "\n",
+    "\n",
+    "function ASemiSymbolic(coordinates,multiOrdersIndices,pointsIndices,multiPointsIndices,middleLinearν,Δ,varM,bigα,orderBspline,WorderBspline,NtypeofExpr,NtypeofFields)\n",
+    "    # I write this function to be able to go through the matrix inversion path\n",
+    "    # the model function is AuSymbolic (below)\n",
+    "\n",
+    "    # 07/10/2025\n",
+    "    AjiννᶜU=0\n",
+    "    Ulocal=0\n",
+    "\n",
+    "    #region preparation \n",
+    "\n",
+    "    L_MINUS_N = multiOrdersIndices\n",
+    "    L_MINUS_N = L_MINUS_N .-L_MINUS_N[1]\n",
+    "\n",
+    "    #endregion\n",
+    "\n",
+    "     #region we compute the integral for 1D domain(s)\n",
+    "\n",
+    "    integral1DWYYKK = Array{Any,1}(undef,length(coordinates))\n",
+    "    modifiedμ=Array{Any,1}(undef,length(coordinates))\n",
+    "    for iCoord in eachindex(coordinates) # for each \n",
+    "        integralParams = @strdict oB =orderBspline[iCoord] oWB = WorderBspline[iCoord] νCoord=pointsIndices[middleLinearν][iCoord] LCoord = multiPointsIndices[end][iCoord] ΔCoord=Δ[iCoord] l_n_max=L_MINUS_N[end][iCoord]\n",
+    "        output = myProduceOrLoad(getIntegralWYYKKK,integralParams,\"intKernel\")\n",
+    "        @show integral1DWYYKK[iCoord] = output[\"intKernelforνLΔ\"]\n",
+    "        @show modifiedμ[iCoord] = output[\"modμ\"] # this can be still 'nothing'\n",
+    "    end\n",
+    "    @show typeof(integral1DWYYKK[1]), typeof(modifiedμ[1])\n",
+    "    @show size(integral1DWYYKK[1])\n",
+    "    #endregion\n",
+    "\n",
+    "\n",
+    "    coefInversionDict = @strdict coordinates multiOrdersIndices pointsIndices Δ WorderBspline modifiedμ\n",
+    "\n",
+    "    output=myProduceOrLoad(TaylorCoefInversion,coefInversionDict,\"taylorCoefInv\")\n",
+    "    @show Cˡη=output[\"CˡηGlobal\"]\n",
+    "\n",
+    "    # the order is: (νᶜ,) ν, i, j  here\n",
+    "\n",
+    "    Ulocal = Array{Num,2}(undef,length(pointsIndices),NtypeofFields)\n",
+    "    for iField in eachindex(fields)\n",
+    "        newstring=split(string(fields[iField]),\"(\")[1]\n",
+    "        Ulocal[:,iField]=Symbolics.variables(Symbol(newstring),1:length(pointsIndices))\n",
+    "    end\n",
+    "\n",
+    "    AjiννᶜU = Array{Num,1}(undef,NtypeofExpr)\n",
+    "\n",
+    "\n",
+    "    AjiννᶜU .= 0\n",
+    "\n",
+    "\n",
+    "    for iExpr in eachindex(exprs) # j in eq. 52\n",
+    "        for iField in eachindex(fields) # i in eq. 52\n",
+    "            α = bigα[iExpr,iField]\n",
+    "\n",
+    "            # this is the ν point in the relative space-time domain\n",
+    "\n",
+    "            #linearν = middleLinearν  \n",
+    "\n",
+    "            CoefU = 0\n",
+    "\n",
+    "            for linearμᶜ in eachindex(pointsIndices)\n",
+    "                    \n",
+    "                tmpCˡημᶜ=Cˡη[:,:,linearμᶜ] # C^{(l')}_{μ'+η';μ',ν}\n",
+    "\n",
+    "                for linearμ in eachindex(pointsIndices)\n",
+    "\n",
+    "                    tmpCˡημ=Cˡη[:,:,linearμ] # C^{(l)}_{μ+η;μ,ν}\n",
+    "\n",
+    "\n",
+    "                    for linearμ_plus_η in eachindex(pointsIndices) # relative position νᶜ-ν\n",
+    "\n",
+    "                        U_HERE = Ulocal[linearμ_plus_η,iField]\n",
+    "                        \n",
+    "                        for eachα in α\n",
+    "                            \n",
+    "                            nodeValue=eachα.node\n",
+    "                            nᶜ = eachα.nᶜ\n",
+    "                            n = eachα.n\n",
+    "\n",
+    "                            for linearμᶜ_plus_ηᶜ in eachindex(pointsIndices)\n",
+    "                                \n",
+    "                                #linearμᶜ_plus_ηᶜ_in_the_whole = LinearIndices(multiOrdersIndices)[vec2car(pointsIndices[linearμᶜ_plus_ηᶜ])]\n",
+    "                                linearμᶜ_plus_ηᶜ_in_the_whole = LinearIndices(pointsIndices)[vec2car(pointsIndices[linearμᶜ_plus_ηᶜ])]\n",
+    "                                #NF 29/09/2025 I am not sure if it is ok to change like this ...\n",
+    "\n",
+    "                                localmapηᶜ=Dict()\n",
+    "\n",
+    "                                for iVar in eachindex(vars)\n",
+    "                                    localmapηᶜ[vars[iVar]]=varM[iVar,linearμᶜ_plus_ηᶜ_in_the_whole][]\n",
+    "                                end\n",
+    "                                \n",
+    "                                for l in n .+ L_MINUS_N\n",
+    "                                    if l ∈ L_MINUS_N\n",
+    "                                        linearl = LinearIndices(multiOrdersIndices)[l]\n",
+    "                                        for lᶜ in nᶜ.+ L_MINUS_N\n",
+    "                                            if lᶜ ∈ L_MINUS_N\n",
+    "                                                linearlᶜ = LinearIndices(multiOrdersIndices)[lᶜ]\n",
+    "                                                kernelProducts = 1\n",
+    "                                                for iCoord in eachindex(coordinates)\n",
+    "                                                    l_n_field = Tuple(l-n)[iCoord]\n",
+    "                                                    l_n_variable = Tuple(lᶜ-nᶜ)[iCoord]\n",
+    "                                                    # here I take only the middle_value\n",
+    "                                                    #kernelProducts*=integralBsplineTaylorKernels1D(orderBspline[iCoord],Δ[iCoord],l_n_variable,l_n_field)[1]\n",
+    "                                                    kernelProducts*=integral1DWYYKK[iCoord][pointsIndices[linearμᶜ][iCoord],pointsIndices[linearμ][iCoord],l_n_variable+1,l_n_field+1]\n",
+    "                                                    #kernelProducts*=integralBsplineTaylorKernels1DWithWindow1D(orderBspline[iCoord],WorderBspline[iCoord],pointsIndices[linearμᶜ][iCoord],pointsIndices[linearμ][iCoord],pointsIndices[linearν][iCoord],multiPointsIndices[end][iCoord], Δ[iCoord],l_n_variable,l_n_field)\n",
+    "                                                end\n",
+    "                                                \n",
+    "                                                #nodeValue=Symbol(nodeValue)\n",
+    "                                                #@show localExpression=substitute(nodeValue,localmap)\n",
+    "                                                #@show typeof(nodeValue)\n",
+    "                                                #newExpr = mySimplify.(map((e) -> substitute(e, Dict(localmap)), nodeValue))\n",
+    "                                                \n",
+    "                                                substitutedValue = substitute(nodeValue, localmapηᶜ)\n",
+    "\n",
+    "                                                CoefU +=tmpCˡημᶜ[linearμᶜ_plus_ηᶜ,linearlᶜ]*tmpCˡημ[linearμ_plus_η,linearl]*kernelProducts*substitutedValue*U_HERE\n",
+    "                                            end\n",
+    "                                        end\n",
+    "                                    end\n",
+    "                                end\n",
+    "                                \n",
+    "                            end\n",
+    "                            \n",
+    "                        end\n",
+    "              \n",
+    "                    end\n",
+    "                end\n",
+    "            end\n",
+    "       \n",
+    "\n",
+    "            AjiννᶜU[iExpr] += CoefU\n",
+    "            \n",
+    "        end\n",
+    "    end\n",
+    "    \n",
+    "\n",
+    "    return AjiννᶜU,Ulocal\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9949480a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmpAjiννᶜU,tmpUlocal=ASemiSymbolic(coordinates,multiOrdersIndices,pointsIndices,multiPointsIndices,middleLinearν,Δ,varM,bigα,orderBspline,WorderBspline,NtypeofExpr,NtypeofFields);\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6764d069",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmpAjiννᶜU"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6e440bb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
