cannot understand why this takes longtime

--- a/OPTmotors/myOwnApplications/demo1.ipynb
+++ b/OPTmotors/myOwnApplications/demo1.ipynb
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "360e0c38",
    "metadata": {},
    "outputs": [
@@ -967,16 +967,9 @@
     "\n",
     "    # the order is: (νᶜ,) ν, i, j  here\n",
     "\n",
-    "    Ulocal = Array{Num,2}(undef,length(pointsIndices),NtypeofFields)\n",
-    "    for iField in eachindex(fields)\n",
-    "        newstring=split(string(fields[iField]),\"(\")[1]\n",
-    "        Ulocal[:,iField]=Symbolics.variables(Symbol(newstring),1:length(pointsIndices))\n",
-    "    end\n",
+    "    Ajiννᶜ = Array{Num,3}(undef,length(pointsIndices),NtypeofField,NtypeofExpr)\n",
     "\n",
-    "    AjiννᶜU = Array{Num,1}(undef,NtypeofExpr)\n",
-    "\n",
-    "\n",
-    "    AjiννᶜU .= 0\n",
+    "    Ajiννᶜ .= 0\n",
     "\n",
     "\n",
     "    for iExpr in eachindex(exprs) # j in eq. 52\n",
@@ -1000,8 +993,10 @@
     "\n",
     "                    for linearμ_plus_η in eachindex(pointsIndices) # relative position νᶜ-ν\n",
     "\n",
-    "                        U_HERE = Ulocal[linearμ_plus_η,iField]\n",
+    "                        #U_HERE = Ulocal[linearμ_plus_η,iField]\n",
     "                        \n",
+    "                        Coef4U_HERE = 0\n",
+    "\n",
     "                        for eachα in α\n",
     "                            \n",
     "                            nodeValue=eachα.node\n",
@@ -1043,7 +1038,8 @@
     "                                                \n",
     "                                                substitutedValue = substitute(nodeValue, localmapηᶜ)\n",
     "\n",
-    "                                                CoefU +=tmpCˡημᶜ[linearμᶜ_plus_ηᶜ,linearlᶜ]*tmpCˡημ[linearμ_plus_η,linearl]*kernelProducts*substitutedValue*U_HERE\n",
+    "                                                #CoefU +=tmpCˡημᶜ[linearμᶜ_plus_ηᶜ,linearlᶜ]*tmpCˡημ[linearμ_plus_η,linearl]*kernelProducts*substitutedValue*U_HERE\n",
+    "                                                Coef4U_HERE +=tmpCˡημᶜ[linearμᶜ_plus_ηᶜ,linearlᶜ]*tmpCˡημ[linearμ_plus_η,linearl]*kernelProducts*substitutedValue\n",
     "                                            end\n",
     "                                        end\n",
     "                                    end\n",
@@ -1053,18 +1049,20 @@
     "                            \n",
     "                        end\n",
     "              \n",
+    "                        Ajiννᶜ[linearμ_plus_η,iField,iExpr]=Coef4U_HERE\n",
+    "\n",
     "                    end\n",
     "                end\n",
     "            end\n",
     "       \n",
     "\n",
-    "            AjiννᶜU[iExpr] += CoefU\n",
+    "            #AjiννᶜU[iExpr] += CoefU\n",
     "            \n",
     "        end\n",
     "    end\n",
     "    \n",
     "\n",
-    "    return AjiννᶜU,Ulocal\n",
+    "    return Ajiννᶜ\n",
     "end"
    ]
   },
@@ -1092,6 +1090,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d6e440bb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e10bcb89",
+   "metadata": {},
+   "source": [
+    "# test typage of BsplineTaylorIntegral1D kernels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "804cb308",
    "metadata": {},
    "outputs": [],
    "source": []
