--- a/OPTmotors/myOwnApplications/demo1.ipynb
+++ b/OPTmotors/myOwnApplications/demo1.ipynb
@@ -937,6 +937,12 @@
     "    # the model function is AuSymbolic (below)\n",
     "\n",
     "\n",
+    "    # here we develop!!! 06/11/2025!!!\n",
+    "\n",
+    "\n",
+    "    νIndices=[pointsIndices[14]] # here I just put this but \n",
+    "\n",
+    "\n",
     "    tmp=[]\n",
     "    #region preparation \n",
     "\n",
@@ -979,6 +985,11 @@
     "    for iExpr in eachindex(exprs) # j of Ajiννᶜ\n",
     "        for iField in eachindex(fields) # i of Ajiννᶜ\n",
     "            α = bigα[iExpr, iField]\n",
+    "            \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "            for linearμᶜ in eachindex(pointsIndices)\n",
     "                Cˡημᶜ = Cˡη[:, :, linearμᶜ]  # avoid @show!\n",
     "                for linearμ in eachindex(pointsIndices), linearμ_plus_η in eachindex(pointsIndices)\n",
