--- a/OPTmotors/myOwnApplications/demo1.ipynb
+++ b/OPTmotors/myOwnApplications/demo1.ipynb
@@ -908,13 +908,20 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "ASemiSymbolic (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "Base.Meta.ParseError",
+     "evalue": "ParseError:\n# Error @ /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X44sZmlsZQ==.jl:104:4\n    return Ajiννᶜ,tmp\nend\n#  └ ── Expected `end`",
+     "output_type": "error",
+     "traceback": [
+      "ParseError:\n",
+      "# Error @ /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X44sZmlsZQ==.jl:104:4\n",
+      "    return Ajiννᶜ,tmp\n",
+      "end\n",
+      "#  └ ── Expected `end`\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] top-level scope\n",
+      "   @ ~/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X44sZmlsZQ==.jl:104"
+     ]
     }
    ],
    "source": [
@@ -975,7 +982,7 @@
     "\n",
     "    # the order is: (νᶜ,) ν, i, j  here\n",
     "\n",
-    "    Ajiννᶜ = Array{Num,3}(undef,length(pointsIndices),NtypeofFields,NtypeofExpr)\n",
+    "    Ajiννᶜ = Array{Num,4}(undef,length(pointsIndices),length(pointsIndices),NtypeofFields,NtypeofExpr)\n",
     "\n",
     "    Ajiννᶜ .= 0\n",
     "\n",
@@ -985,29 +992,36 @@
     "    for iExpr in eachindex(exprs) # j of Ajiννᶜ\n",
     "        for iField in eachindex(fields) # i of Ajiννᶜ\n",
     "            α = bigα[iExpr, iField]\n",
-    "            \n",
+    "            for ν in νIndices # ν in Ajiννᶜ (in the relative coordinate)\n",
+    "                for linearνᶜ in eachindex(pointsIndices) # νᶜ in Ajiννᶜ (in the relative coordinate)\n",
+    "\n",
+    "\n",
+    "                    \n",
     "\n",
     "\n",
     "\n",
     "\n",
-    "            for linearμᶜ in eachindex(pointsIndices)\n",
-    "                Cˡημᶜ = Cˡη[:, :, linearμᶜ]  # avoid @show!\n",
-    "                for linearμ in eachindex(pointsIndices), linearμ_plus_η in eachindex(pointsIndices)\n",
-    "                    Coef4U_HERE = 0\n",
-    "                    for eachα in α\n",
-    "                        nᶜ = eachα.nᶜ; n = eachα.n\n",
-    "                        localmapηᶜ = Dict{Any,Any}()\n",
-    "                        for linearμᶜ_plus_ηᶜ in eachindex(pointsIndices)\n",
-    "                            #empty!(localmapηᶜ)\n",
-    "                            μᶜ_plus_ηᶜ_idx = LI_points[vec2car(pointsIndices[linearμᶜ_plus_ηᶜ])]\n",
-    "                            ####localmapηᶜ[vars[iVar]] = varM[iVar, linearμᶜ_plus_ηᶜ][]\n",
-    "                            for iVar in eachindex(vars)\n",
-    "                                localmapηᶜ[iVar] = varM[iVar, μᶜ_plus_ηᶜ_idx][]\n",
-    "                            end\n",
-    "                            for (l, lᶜ) in valid_pairs\n",
-    "                            #    linearl  = LI_multi[l]\n",
-    "                            #    linearlᶜ = LI_multi[lᶜ]\n",
-    "                                            \n",
+    "\n",
+    "                    # wow this seems to be super difficult\n",
+    "\n",
+    "                    Cˡημᶜ = Cˡη[:, :, linearμᶜ]  # avoid @show!\n",
+    "                    for linearμ in eachindex(pointsIndices), linearμ_plus_η in eachindex(pointsIndices)\n",
+    "                        Coef4U_HERE = 0\n",
+    "                        for eachα in α\n",
+    "                            nᶜ = eachα.nᶜ; n = eachα.n\n",
+    "                            localmapηᶜ = Dict{Any,Any}()\n",
+    "                            for linearμᶜ_plus_ηᶜ in eachindex(pointsIndices)\n",
+    "                                #empty!(localmapηᶜ)\n",
+    "                                μᶜ_plus_ηᶜ_idx = LI_points[vec2car(pointsIndices[linearμᶜ_plus_ηᶜ])]\n",
+    "                                ####localmapηᶜ[vars[iVar]] = varM[iVar, linearμᶜ_plus_ηᶜ][]\n",
+    "                                for iVar in eachindex(vars)\n",
+    "                                    localmapηᶜ[iVar] = varM[iVar, μᶜ_plus_ηᶜ_idx][]\n",
+    "                                end\n",
+    "                                for (l, lᶜ) in valid_pairs\n",
+    "                                #    linearl  = LI_multi[l]\n",
+    "                                #    linearlᶜ = LI_multi[lᶜ]\n",
+    "                                                \n",
+    "                                end\n",
     "                            end\n",
     "                        end\n",
     "                    end\n",
@@ -1744,7 +1758,7 @@
     }
    ],
    "source": [
-    "@profilehtml opt = myProduceOrLoad(makeCompleteCostFunctions,concreteModelParameters,\"numOperators\",\"quasiNum\")\n"
+    "#@profilehtml opt = myProduceOrLoad(makeCompleteCostFunctions,concreteModelParameters,\"numOperators\",\"quasiNum\")\n"
    ]
   },
   {
