--- a/OPTmotors/myOwnApplications/demo1.ipynb
+++ b/OPTmotors/myOwnApplications/demo1.ipynb
@@ -903,138 +903,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 87,
    "id": "2049a99a",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "output[\"modμ\"] = Num[1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "3×3×5×5 Array{Float64, 4}:\n",
-       "[:, :, 1, 1] =\n",
-       " 0.5  0.0  0.0\n",
-       " 0.0  0.5  0.0\n",
-       " 0.0  0.0  0.0\n",
+       "3×3×2 Array{Num, 3}:\n",
+       "[:, :, 1] =\n",
+       "   1    1    1\n",
+       "   3    3    3\n",
+       " 2.0  2.0  2.0\n",
        "\n",
-       "[:, :, 2, 1] =\n",
-       " -0.166667  0.0       0.0\n",
-       "  0.0       0.166667  0.0\n",
-       "  0.0       0.0       0.0\n",
-       "\n",
-       "[:, :, 3, 1] =\n",
-       " 0.0416667  0.0        0.0\n",
-       " 0.0        0.0416667  0.0\n",
-       " 0.0        0.0        0.0\n",
-       "\n",
-       "[:, :, 4, 1] =\n",
-       " -0.00833333  0.0         0.0\n",
-       "  0.0         0.00833333  0.0\n",
-       "  0.0         0.0         0.0\n",
-       "\n",
-       "[:, :, 5, 1] =\n",
-       " 0.00138889  0.0         0.0\n",
-       " 0.0         0.00138889  0.0\n",
-       " 0.0         0.0         0.0\n",
-       "\n",
-       "[:, :, 1, 2] =\n",
-       " -0.166667  0.0       0.0\n",
-       "  0.0       0.166667  0.0\n",
-       "  0.0       0.0       0.0\n",
-       "\n",
-       "[:, :, 2, 2] =\n",
-       " 0.0833333  0.0        0.0\n",
-       " 0.0        0.0833333  0.0\n",
-       " 0.0        0.0        0.0\n",
-       "\n",
-       "[:, :, 3, 2] =\n",
-       " -0.025  0.0    0.0\n",
-       "  0.0    0.025  0.0\n",
-       "  0.0    0.0    0.0\n",
-       "\n",
-       "[:, :, 4, 2] =\n",
-       " 0.00555556  0.0         0.0\n",
-       " 0.0         0.00555556  0.0\n",
-       " 0.0         0.0         0.0\n",
-       "\n",
-       "[:, :, 5, 2] =\n",
-       " -0.000992063  0.0          0.0\n",
-       "  0.0          0.000992063  0.0\n",
-       "  0.0          0.0          0.0\n",
-       "\n",
-       "[:, :, 1, 3] =\n",
-       " 0.0416667  0.0        0.0\n",
-       " 0.0        0.0416667  0.0\n",
-       " 0.0        0.0        0.0\n",
-       "\n",
-       "[:, :, 2, 3] =\n",
-       " -0.025  0.0    0.0\n",
-       "  0.0    0.025  0.0\n",
-       "  0.0    0.0    0.0\n",
-       "\n",
-       "[:, :, 3, 3] =\n",
-       " 0.00833333  0.0         0.0\n",
-       " 0.0         0.00833333  0.0\n",
-       " 0.0         0.0         0.0\n",
-       "\n",
-       "[:, :, 4, 3] =\n",
-       " -0.00198413  0.0         0.0\n",
-       "  0.0         0.00198413  0.0\n",
-       "  0.0         0.0         0.0\n",
-       "\n",
-       "[:, :, 5, 3] =\n",
-       " 0.000372024  0.0          0.0\n",
-       " 0.0          0.000372024  0.0\n",
-       " 0.0          0.0          0.0\n",
-       "\n",
-       "[:, :, 1, 4] =\n",
-       " -0.00833333  0.0         0.0\n",
-       "  0.0         0.00833333  0.0\n",
-       "  0.0         0.0         0.0\n",
-       "\n",
-       "[:, :, 2, 4] =\n",
-       " 0.00555556  0.0         0.0\n",
-       " 0.0         0.00555556  0.0\n",
-       " 0.0         0.0         0.0\n",
-       "\n",
-       "[:, :, 3, 4] =\n",
-       " -0.00198413  0.0         0.0\n",
-       "  0.0         0.00198413  0.0\n",
-       "  0.0         0.0         0.0\n",
-       "\n",
-       "[:, :, 4, 4] =\n",
-       " 0.000496032  0.0          0.0\n",
-       " 0.0          0.000496032  0.0\n",
-       " 0.0          0.0          0.0\n",
-       "\n",
-       "[:, :, 5, 4] =\n",
-       " -9.64506e-5  0.0         0.0\n",
-       "  0.0         9.64506e-5  0.0\n",
-       "  0.0         0.0         0.0\n",
-       "\n",
-       "[:, :, 1, 5] =\n",
-       " 0.00138889  0.0         0.0\n",
-       " 0.0         0.00138889  0.0\n",
-       " 0.0         0.0         0.0\n",
-       "\n",
-       "[:, :, 2, 5] =\n",
-       " -0.000992063  0.0          0.0\n",
-       "  0.0          0.000992063  0.0\n",
-       "  0.0          0.0          0.0\n",
-       "\n",
-       "[:, :, 3, 5] =\n",
-       " 0.000372024  0.0          0.0\n",
-       " 0.0          0.000372024  0.0\n",
-       " 0.0          0.0          0.0\n",
-       "\n",
-       "[:, :, 4, 5] =\n",
-       " -9.64506e-5  0.0         0.0\n",
-       "  0.0         9.64506e-5  0.0\n",
-       "  0.0         0.0         0.0\n",
-       "\n",
-       "[:, :, 5, 5] =\n",
-       " 1.92901e-5  0.0         0.0\n",
-       " 0.0         1.92901e-5  0.0\n",
-       " 0.0         0.0         0.0"
+       "[:, :, 2] =\n",
+       "   1    1    1\n",
+       "   3    3    3\n",
+       " 2.0  2.0  2.0"
       ]
      },
      "metadata": {},
@@ -1046,7 +938,8 @@
     "iCoord=1\n",
     "integralParams = @strdict oB =orderBspline[iCoord] oWB = WorderBspline[iCoord] νCoord=pointsIndices[middleLinearν][iCoord] LCoord = multiPointsIndices[end][iCoord] ΔCoord=Δ[iCoord] l_n_max=L_MINUS_N[end][iCoord]\n",
     "        output = myProduceOrLoad(getIntegralWYYKK,integralParams,\"intKernel\")\n",
-    "integral1DWYYKK[iCoord] = output[\"intKernelforνLΔ\"]"
+    "integral1DWYYKK[iCoord] = output[\"intKernelforνLΔ\"]\n",
+    "@show output[\"modμ\"]"
    ]
   },
   {
