--- a/OPTmotors/myOwnApplications/demo1.ipynb
+++ b/OPTmotors/myOwnApplications/demo1.ipynb
@@ -1370,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "ec2748b7",
    "metadata": {},
    "outputs": [
@@ -1378,7 +1378,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "L_MINUS_N = L_MINUS_N = CartesianIndices((5, 5, 5))"
+      "L_MINUS_N = L_MINUS_N = CartesianIndices((5, 5, 5))\n",
+      "(.-)(L_MINUS_N[1]) = CartesianIndex(-1, -1, -1)\n",
+      "(typeof(integral1DWYYKK[1]), typeof(modifiedμ[1])) = (Array{Float64, 4}, Array{Num, 3})\n",
+      "size(integral1DWYYKK[1]) = (3, 3, 6, 6)\n",
+      "(modifiedμ, integral1DWYYKK[1]) = (Any[Num[1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0], Num[1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0], Num[1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0]], [0.5 0.0 0.0; 0.0 0.5 0.0; 0.0 0.0 0.0;;; -0.16666666666666652 0.0 0.0; 0.0 0.16666666666666696 0.0; 0.0 0.0 0.0;;; 0.04166666666666652 0.0 0.0; 0.0 0.04166666666666652 0.0; 0.0 0.0 0.0;;; -0.0083333333333336 0.0 0.0; 0.0 0.008333333333334044 0.0; 0.0 0.0 0.0;;; 0.001388888888889254 0.0 0.0; 0.0 0.0013888888888885138 0.0; 0.0 0.0 0.0;;; -0.00019841269841247566 0.0 0.0; 0.0 0.00019841269841123222 0.0; 0.0 0.0 0.0;;;; -0.16666666666666652 0.0 0.0; 0.0 0.16666666666666696 0.0; 0.0 0.0 0.0;;; 0.08333333333333304 0.0 0.0; 0.0 0.08333333333333304 0.0; 0.0 0.0 0.0;;; -0.0250000000000008 0.0 0.0; 0.0 0.02500000000000213 0.0; 0.0 0.0 0.0;;; 0.005555555555557016 0.0 0.0; 0.0 0.005555555555554055 0.0; 0.0 0.0 0.0;;; -0.0009920634920623783 0.0 0.0; 0.0 0.000992063492056161 0.0; 0.0 0.0 0.0;;; 0.00014880952380984523 0.0 0.0; 0.0 0.0001488095238100821 0.0; 0.0 0.0 0.0;;;; 0.04166666666666652 0.0 0.0; 0.0 0.04166666666666652 0.0; 0.0 0.0 0.0;;; -0.0250000000000008 0.0 0.0; 0.0 0.02500000000000213 0.0; 0.0 0.0 0.0;;; 0.008333333333335524 0.0 0.0; 0.0 0.008333333333331083 0.0; 0.0 0.0 0.0;;; -0.0019841269841247566 0.0 0.0; 0.0 0.001984126984112322 0.0; 0.0 0.0 0.0;;; 0.0003720238095246131 0.0 0.0; 0.0 0.00037202380952520525 0.0; 0.0 0.0 0.0;;; -5.7870370370298e-5 0.0 0.0; 0.0 5.78703703742652e-5 0.0; 0.0 0.0 0.0;;;; -0.0083333333333336 0.0 0.0; 0.0 0.008333333333334044 0.0; 0.0 0.0 0.0;;; 0.005555555555557016 0.0 0.0; 0.0 0.005555555555554055 0.0; 0.0 0.0 0.0;;; -0.0019841269841247566 0.0 0.0; 0.0 0.001984126984112322 0.0; 0.0 0.0 0.0;;; 0.0004960317460328175 0.0 0.0; 0.0 0.0004960317460336069 0.0; 0.0 0.0 0.0;;; -9.645061728383e-5 0.0 0.0; 0.0 9.6450617290442e-5 0.0; 0.0 0.0 0.0;;; 1.543209876566149e-5 0.0 0.0; 0.0 1.5432098755102034e-5 0.0; 0.0 0.0 0.0;;;; 0.001388888888889254 0.0 0.0; 0.0 0.0013888888888885138 0.0; 0.0 0.0 0.0;;; -0.0009920634920623783 0.0 0.0; 0.0 0.000992063492056161 0.0; 0.0 0.0 0.0;;; 0.0003720238095246131 0.0 0.0; 0.0 0.00037202380952520525 0.0; 0.0 0.0 0.0;;; -9.645061728383e-5 0.0 0.0; 0.0 9.6450617290442e-5 0.0; 0.0 0.0 0.0;;; 1.9290123457076864e-5 0.0 0.0; 0.0 1.9290123443877543e-5 0.0; 0.0 0.0 0.0;;; -3.1565656573226715e-6 0.0 0.0; 0.0 3.156565659444431e-6 0.0; 0.0 0.0 0.0;;;; -0.00019841269841247566 0.0 0.0; 0.0 0.00019841269841123222 0.0; 0.0 0.0 0.0;;; 0.00014880952380984523 0.0 0.0; 0.0 0.0001488095238100821 0.0; 0.0 0.0 0.0;;; -5.7870370370298e-5 0.0 0.0; 0.0 5.78703703742652e-5 0.0; 0.0 0.0 0.0;;; 1.543209876566149e-5 0.0 0.0; 0.0 1.5432098755102034e-5 0.0; 0.0 0.0 0.0;;; -3.1565656573226715e-6 0.0 0.0; 0.0 3.156565659444431e-6 0.0; 0.0 0.0 0.0;;; 5.260942756872093e-7 0.0 0.0; 0.0 5.260942782412156e-7 0.0; 0.0 0.0 0.0])\n"
+     ]
+    },
+    {
+     "ename": "UndefVarError",
+     "evalue": "UndefVarError: `CUDABackend` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: `CUDABackend` not defined in `Main`\n",
+      "Suggestion: check for spelling errors or missing imports.\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] build_kernelIntegral_gpu(integral1DWYYKK::Vector{Any}, L_MINUS_N::CartesianIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}, pointsTuples::Array{Vector{Int64}, 3}, coordinates::Tuple{Num, Num, Num}; use_float32::Bool)\n",
+      "   @ Main ~/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X45sZmlsZQ==.jl:128\n",
+      " [2] build_kernelIntegral_gpu\n",
+      "   @ ~/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X45sZmlsZQ==.jl:76 [inlined]\n",
+      " [3] ASemiSymbolic(coordinates::Tuple{Num, Num, Num}, multiOrdersIndices::CartesianIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}, pointsIndices::Array{Vector{Int64}, 3}, multiPointsIndices::CartesianIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}, middleLinearν::Int64, Δ::Tuple{Float64, Float64, Float64}, varM::Matrix{Any}, bigα::Matrix{Any}, orderBspline::Vector{Int64}, WorderBspline::Vector{Int64}, NtypeofExpr::Int64, NtypeofFields::Int64)\n",
+      "   @ Main ~/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X46sZmlsZQ==.jl:74\n",
+      " [4] top-level scope\n",
+      "   @ ~/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X51sZmlsZQ==.jl:1"
      ]
     }
    ],
